--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "delay": "^6.0.0",
     "express": "^4.18.1",
     "kafkajs": "^2.2.4",
     "module-alias": "^2.2.3",
